# AutoDoc-Gen

./: .env.example  README.md  alembic.ini  pyproject.toml
docker/: docker-compose.db-only.yml
src/adapters/: base.py  s3_adapter.py
src/api/: main.py
src/config/: __init__.py  settings.py
src/db/: connection.py  models.py  schemas.py
src/db/migrations/: env.py
src/db/migrations/versions/: c496214b3a08_testing_remove_task_id_from_approval_.py  e4d5ccbdd63f_initial_scheme.py
src/db/repositories/: artifact_repository.py  base.py  task_repository.py
src/telemetry/: logger.py
