[project]
name = "autodoc-gen"
version = "0.1.0"
description = "Dynamic tech documentation and architecture generator using CrewAI, LiteLLM, Temporal.io, and Mermaid.js."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "AutoDoc-Gen Engineering Team", email = "engineering@autodocgen.example" }]
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",

    # Workflow orchestration
    "temporalio>=1.6.0",

    # AI / LLM / Agents
    "crewai>=0.51.0",
    "litellm>=1.41.0",

    # Data validation and settings
    "pydantic>=2.8.2",
    "pydantic-settings>=2.3.4",

    # Database
    "sqlalchemy[asyncio]>=2.0.31",
    "asyncpg>=0.29.0",
    "alembic>=1.13.2",

    # Object storage
    "boto3>=1.34.0",
    "botocore>=1.34.0",

    # Observability
    "structlog>=24.2.0",
    "langtrace-python-sdk>=2.3.0",

    # Templating and utilities
    "jinja2>=3.1.4",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.1",
    "ruff>=0.5.0",
    "pre-commit>=3.7.1",
    "moto[s3]>=5.0.0",
    "faker>=26.0.0",
    "aiosqlite>=0.21.0",
]

[project.scripts]
autodoc-api = "src.api.main:run"
autodoc-worker = "src.workflows.worker:run"

[tool.alembic]
script_location = "src/db/migrations"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
implicit_reexport = false
show_error_codes = true
pretty = true
exclude = [
    "tests/integration/e2e",
    ".venv",
    "migrations",
]

[[tool.mypy.overrides]]
module = [
    "boto3.*",
    "botocore.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "D",
    "UP",
    "B",
    "C4",
    "SIM",
    "PL",
    "TRY",
    "RUF",
]
ignore = [
    "D203",
    "D213",
    "D100",
    "D104",
    "TC001",
    "TC002",
    "TC003",
    "B024",
    "B027",
    "PLR2004",
    "PLW0603",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D100", "D101", "D102", "D103", "D107"]
"src/db/migrations/**/*.py" = ["D100", "D101", "D102", "D103", "D107", "UP035", "UP007", "UP017"]
"src/db/migrations/versions/*.py" = ["D415"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--strict-markers --strict-config -ra"
markers = [
    "unit: fast unit tests with mocks/fakes",
    "integration: tests that exercise real or near-real components",
    "e2e: full end-to-end pipeline tests",
    "slow: tests that should not run on every commit",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/migrations/*",
]

[tool.coverage.report]
show_missing = true
fail_under = 80
